--- a/notebooks/EDA/1-eda-mala.ipynb
+++ b/notebooks/EDA/1-eda-mala.ipynb
@@ -63,6 +63,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8242caa9-dd39-4808-b126-fe90ac52f8b5",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.sql(\"select * from submission\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "237d2933-6686-43bc-ab94-cf9f52d58f7d",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.display()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
